<resources>
    <string name="app_name">cos_weak_network_practice</string>
    <string name="upload">上传测试</string>
    <string name="path">选择上传文件</string>
    <string name="path_tips">文件路径</string>
    <string name="src_path">srcPath:</string>
    <string name="cos_path">cosPath:</string>
    <string name="edit">编辑器</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="edit_cos_path">指定存储位置</string>
</resources>
